--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
     "name": "word-plug",
     "displayName": "word-plug",
     "description": "刷单词的小插件",
+    "author": "deslrey",
+    "publisher": "deslrey",
+    "icon": "avatar.jpg",
     "version": "0.1.0",
+    "repository": "https://github.com/deslrey/word-plug",
     "engines": {
         "vscode": "^1.102.0"
     },
@@ -33,11 +37,15 @@
         "test": "vscode-test"
     },
     "devDependencies": {
-        "@types/vscode": "^1.102.0",
         "@types/mocha": "^10.0.10",
         "@types/node": "20.x",
-        "eslint": "^9.25.1",
+        "@types/vscode": "^1.102.0",
         "@vscode/test-cli": "^0.0.11",
-        "@vscode/test-electron": "^2.5.2"
+        "@vscode/test-electron": "^2.5.2",
+        "@vscode/vsce": "^3.6.0",
+        "eslint": "^9.25.1"
+    },
+    "dependencies": {
+        "vsce": "^2.15.0"
     }
 }
